css: for bottom links, avoid showing scrollbars
When there is a small overflow in Chromium (due to ampersand?), it
displays a scrollbar. Use `overflow: hidden` to avoid that.

--- a/content/media/css/luffy.links.less
+++ b/content/media/css/luffy.links.less
@@ -10,7 +10,7 @@
         width: 1.5em;
         & ~ * {
             display: block;
-            overflow: auto;
+            overflow: hidden;
         }
     }
 }
